# daily-stanup-bot

./: .dockerignore  .env.example  Makefile  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_standup_topic_id.py
app/: main.py
app/application/: __init__.py  dtos.py  use_cases.py
app/config/: settings.py
app/domain/: __init__.py  entities.py  settings_entity.py  value_objects.py
app/infrastructure/: __init__.py  database.py
app/infrastructure/repositories/: __init__.py  settings_repository.py  standup_repository.py  user_repository.py
app/infrastructure/schema/: __init__.py  base.py  models.py
app/interface/: __init__.py  bot.py  fsm.py  scheduler.py
app/interface/handlers/: __init__.py  admin.py  standup.py  user.py
app/interface/middlewares/: __init__.py  bot.py  scheduler_middleware.py  session.py
docker/dev/: docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml
tests/: test_domain.py
